spinner alignment fixed

--- a/components/Spinner.module.css
+++ b/components/Spinner.module.css
@@ -1,8 +1,8 @@
 .ldshourglass {
     display: inline-block;
     position: relative;
-    width: 150px;
-    height: 150px;
+    width: 50px;
+    height: 50px;
   }
   .ldshourglass:after {
     content: " ";
@@ -12,8 +12,8 @@
     height: 0;
     margin: 8px;
     box-sizing: border-box;
-    border: 32px solid #a3e235;
-    border-color: #a3e235 transparent #a3e235 transparent;
+    border: 32px solid #dfdfdf;
+    border-color: #dfdfdf transparent #dfdfdf transparent;
     animation: lds-hourglass 1.2s infinite;
   }
   @keyframes lds-hourglass {
